# test-gen

./: Cargo.toml  Justfile  README.md  editorconfig
src/: ast.rs  lib.rs  parser.rs
tests/fixtures/: describe.dhall  hello.dhall  suite-2.dhall  suite-3.dhall  suite.dhall  suite.tg  test.dhall
